k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: job-matcher
  labels:
    name: job-matcher
